--- a/Kards10/css/main.css
+++ b/Kards10/css/main.css
@@ -24,6 +24,7 @@
  *  16. stats
  *  17. contact
  *  18. footer
+ *  19. Calculator
  *
  * =================================================================== 
  */
@@ -2597,3 +2598,32 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+/*Calculator */
+.calculator {
+	width: 240px;
+	margin: 0 auto;
+	padding: 10px;
+	border: 1px solid #ccc;
+	text-align: center;
+  }
+  
+  .calculator input[type="text"] {
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 5px;
+  }
+  
+  .calculator button {
+	width: 50%;
+	padding: 5px;
+	margin-bottom: 5px;
+	border: none;
+	background-color: #f2f2f2;
+	cursor: pointer;
+  }
+  
+  .calculator button:hover {
+	background-color: #e6e6e6;
+  }
+  
